--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,5 +1,6 @@
+@import "config/variables";
 @import "base/base";
 @import "breakpoint/breakpoint";
-@import "config/variables";
 @import "layout/layout";
 @import "components/hero";
+@import "components/details";
