--- a/assets/scss/config/_variables.scss
+++ b/assets/scss/config/_variables.scss
@@ -4,23 +4,23 @@
 /*=================== FONTS ===================*/
 @font-face {
   font-family: Anurati;
-  src: url(../../fonts/Anurati.otf);
+  src: url(../../../assets/fonts/Anurati.otf);
 }
 @font-face {
   font-family: Aquatico;
-  src: url(../../fonts/Aquatico.otf);
+  src: url(../../../assets/fonts/Aquatico.otf);
 }
 @font-face {
   font-family: Comfortaa;
-  src: url(../../fonts/Comfortaa.ttf);
+  src: url(../../../assets/fonts/Comfortaa.ttf);
 }
 @font-face {
   font-family: Glacial Indifference;
-  src: url(../../fonts/GlacialIndifference.otf);
+  src: url(../../../assets/fonts/GlacialIndifference.otf);
 }
 @font-face {
   font-family: Quicksand;
-  src: url(../../fonts/Quicksand.otf);
+  src: url(../../../assets/fonts/Quicksand.otf);
 }
 /*=================== VARIABLES ===================*/
 // Colors
@@ -36,6 +36,7 @@ $small-font: 0.813rem; // 13px
 $smaller-font: 0.75rem; // 12px
 
 // Font Weight
+$light: 100;
 $reguler: 400;
 $medium: 500;
 $semi-bold: 600;
@@ -70,6 +71,6 @@ $z-999: 999;
 
 /* Others */
 $hidden: hidden;
-$trans-ease: 200ms ease-in-out;
+$trans-ease: all 300ms ease-in;
 $trans-cubic: 500ms cubic-bezier(0.77, 0.2, 0.05, 1);
 $header-height: 4rem;
