--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -21,9 +21,61 @@
   }
 }
 /*=================== REUSEABLE CLASSES ===================*/
-.d-flex {
-  display: flex;
+main {
+  // overflow: hidden;
+  width: 100%;
+  height: 100vh;
+  .main__bg {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    z-index: -1;
+  }
+  .hero__section {
+    margin-top: 0;
+    height: 100vh;
+    transition: $trans-ease;
+  }
+  .transform-hero {
+    margin-top: -260px;
+  }
+  .details__section {
+    position: absolute;
+    width: 100%;
+    bottom: -50%;
+    transition: $trans-ease;
+  }
+  .transform-details {
+    bottom: 0;
+  }
 }
-.d-grid {
-  display: grid;
+section {
+  padding: 2rem 0;
+}
+.weather__container {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin-bottom: $x-0-5;
+  .weather__icon {
+    width: 80px;
+  }
+  .weather__degree {
+    font-size: $biggest-font;
+    font-family: $Comfortaa;
+  }
+}
+.weather__location,
+.weather__mood,
+.weather__feels--like {
+  font-family: $Comfortaa;
+  font-size: $small-font;
+  opacity: 0.8;
+}
+.weather__mood {
+  font-size: $normal-font;
+  opacity: 1;
+  margin: $x-0-25 0;
 }
