--- a/assets/scss/components/_details.scss
+++ b/assets/scss/components/_details.scss
@@ -1,6 +1,13 @@
 .details__section {
   background-color: $gray-color;
   color: $dark-color;
+  position: absolute;
+  width: 100%;
+  bottom: -90%;
+  transition: $trans-ease;
+  @include breakpoint(sm) {
+    bottom: -50%;
+  }
   .details__data {
     .details__date {
       font-size: 5rem;
@@ -82,6 +89,9 @@
     }
   }
 }
-.transform {
-  // bottom: 0;
+.transform-details {
+  bottom: 0;
+  // @include breakpoint(sm) {
+  //   bottom: 0;
+  // }
 }
