--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -1,7 +1,7 @@
 .hero__section {
-  // height: 100vh;
-  // width: 100%;
-  // position: relative;
+  margin-top: 0;
+  height: 100vh;
+  transition: $trans-ease;
   .hero__content {
     .hero__data {
       display: flex;
@@ -80,6 +80,7 @@
           align-items: flex-end;
           // gap: 0.2rem;
           margin: $x-0-5 0;
+          position: relative;
           .hours,
           .minutes {
             font-size: 5rem;
@@ -125,25 +126,29 @@
             font-size: 1.5rem;
             font-family: $Anurati;
             text-transform: uppercase;
-            margin-bottom: 1rem;
-            margin-left: $x-0-5;
+            // margin-bottom: 1rem;
+            // margin-left: $x-0-5;
+            position: absolute;
+            left: 300px;
+            bottom: 14px;
             @include breakpoint(xs) {
               font-size: 1rem;
+              left: 220px;
             }
             @include breakpoint(sm) {
               font-size: 2rem;
-              margin-bottom: 1.3rem;
-              margin-left: $x-1;
+              left: 400px;
+              bottom: 20px;
             }
             @include breakpoint(md) {
               font-size: 2.5rem;
-              margin-bottom: 1.8rem;
-              margin-left: $x-2;
+              left: 550px;
+              bottom: 28px;
             }
             @include breakpoint(md) {
               font-size: 3rem;
-              margin-bottom: 2.2rem;
-              margin-left: $x-3;
+              left: 670px;
+              bottom: 35px;
             }
           }
         }
@@ -160,6 +165,81 @@
           margin-top: 0;
         }
       }
+      .hero__arrow--button {
+        margin-top: $x-3;
+        @include breakpoint(sm) {
+          align-self: flex-end;
+          padding: $x-0-75 0;
+        }
+        @include breakpoint(md) {
+          margin-top: 0;
+        }
+        .arrow__wrapper {
+          width: 130px;
+          height: 40px;
+          background-color: $gray-color;
+          color: $dark-color;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 1rem;
+          cursor: pointer;
+          .arrow__button--text {
+            font-family: $Comfortaa;
+            font-weight: $bold;
+            font-size: $normal-font;
+          }
+          .arrow__button {
+            height: 2.5px;
+            width: 25px;
+            border-radius: 6px;
+            background-color: $dark-color;
+            position: relative;
+            transform: translateY(-50%) rotate(90deg);
+            transition: $trans-ease-in-out;
+            &::before,
+            &::after {
+              content: "";
+              height: 100%;
+              width: 15px;
+              position: absolute;
+              background-color: $dark-color;
+              left: 11px;
+              border-radius: 6px;
+              transition: $trans-ease-in-out;
+            }
+            &::before {
+              transform: translateY(-5px) rotate(40deg);
+            }
+            &::after {
+              transform: translateY(5px) rotate(-40deg);
+            }
+          }
+        }
+        .active--button {
+          .arrow__button {
+            &::before,
+            &::after {
+              left: -1px;
+            }
+            &::before {
+              transform: translateY(-5px) rotate(-40deg);
+            }
+            &::after {
+              transform: translateY(5px) rotate(40deg);
+            }
+          }
+        }
+      }
     }
+  }
+}
+.transform-hero {
+  margin-top: -450px;
+  @include breakpoint(xs) {
+    margin-top: -440px;
+  }
+  @include breakpoint(sm) {
+    margin-top: -260px;
   }
 }
