--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -1,11 +1,8 @@
 .hero__section {
-  margin-top: 0;
-  height: 100vh;
-  transition: $trans-ease;
   .hero__content {
     .hero__data {
       display: flex;
-      gap: 2rem;
+      gap: $x-1;
       flex-direction: column;
       @include breakpoint(sm) {
         flex-direction: row;
@@ -16,7 +13,7 @@
         order: 1;
         @include breakpoint(sm) {
           order: 0;
-          width: 350px;
+          width: 21.875rem;
         }
         .quotes {
           font-size: $small-font;
@@ -33,18 +30,114 @@
           font-weight: $reguler;
         }
       }
+
       .hero__weather {
         order: 0;
+        width: 11.25rem;
         @include breakpoint(sm) {
           order: 1;
         }
+        .weather__container {
+          display: flex;
+          align-items: center;
+          gap: $x-1-5;
+          margin-bottom: $x-0-5;
+          .weather__temperature {
+            display: flex;
+            cursor: pointer;
+            .temperature,
+            .degree,
+            .fahrenheit {
+              font-size: $biggest-font;
+              font-family: $Comfortaa;
+            }
+            .fahrenheit {
+              margin-left: $x-0-75;
+            }
+          }
+        }
+        .weather__timezone,
+        .weather__summery,
+        .weather__feels--like {
+          font-family: $Comfortaa;
+          font-size: $small-font;
+          opacity: 0.8;
+        }
+        .weather__summery {
+          font-size: $normal-font;
+          opacity: 1;
+          margin: $x-0-25 0;
+        }
+        .weather__low--high {
+          display: flex;
+          justify-content: space-between;
+          margin-top: $x-1;
+          .weather__low,
+          .weather__high {
+            .low__text,
+            .high__text {
+              font-size: $small-font;
+              font-family: $Comfortaa;
+              opacity: 0.8;
+            }
+            .low__temp,
+            .high__temp {
+              font-size: $normal-font;
+              font-family: $Comfortaa;
+              font-weight: $bold;
+              margin-top: $x-0-25;
+            }
+          }
+        }
       }
     }
-    .hero__time {
-      margin-top: $x-2;
+    .hero__time--date {
+      margin-top: $x-1;
       display: flex;
       flex-direction: column;
+      gap: $x-1;
+      @include breakpoint(sm) {
+        margin-top: -2.5rem;
+      }
+      @include breakpoint(lg) {
+        margin-top: -3rem;
+      }
+
+      .hero__date {
+        .dates,
+        .months,
+        .days {
+          font-weight: $bold;
+        }
+        .months,
+        .days {
+          font-family: $Comfortaa;
+        }
+        .dates {
+          font-size: 3rem;
+          font-family: $Quicksand;
+          @include breakpoint(sm) {
+            font-size: 3.5rem;
+          }
+          @include breakpoint(md) {
+            font-size: 4rem;
+          }
+        }
+        .months {
+          font-size: $normal-font;
+        }
+        .days {
+          font-size: $smaller-font;
+          opacity: 0.7;
+        }
+      }
+
       .time__container {
+        .time__greetings {
+          display: flex;
+          align-items: center;
+          gap: $x-0-25;
+        }
         .greetings,
         .division {
           font-size: $normal-font;
@@ -62,12 +155,8 @@
           }
         }
         .division {
-          font-size: 1rem;
           font-weight: $bold;
           letter-spacing: 0.2rem;
-          @include breakpoint(xs) {
-            font-size: $normal-font;
-          }
           @include breakpoint(sm) {
             font-size: 1.4rem;
           }
@@ -78,168 +167,104 @@
         .time__data {
           display: flex;
           align-items: flex-end;
-          // gap: 0.2rem;
           margin: $x-0-5 0;
-          position: relative;
-          .hours,
-          .minutes {
-            font-size: 5rem;
-            font-family: $Glacial-Indifference;
-            font-weight: $bold;
-            letter-spacing: 0.2rem;
-            @include breakpoint(xs) {
+          @include breakpoint(md) {
+            margin: 0;
+          }
+          .time__wrapper {
+            display: flex;
+            align-items: flex-end;
+            gap: 0.2rem;
+
+            .hours,
+            .minutes {
+              font-size: 5rem;
+              font-family: $Glacial-Indifference;
+              font-weight: $bold;
+              letter-spacing: 0.2rem;
+
+              @include breakpoint(xs) {
+                font-size: 3.5rem;
+              }
+              @include breakpoint(sm) {
+                font-size: 7rem;
+              }
+              @include breakpoint(md) {
+                font-size: 10rem;
+              }
+              @include breakpoint(lg) {
+                font-size: 12rem;
+              }
+            }
+            .seconds,
+            .colon {
               font-size: 3.5rem;
+              font-family: $Glacial-Indifference;
+              margin-bottom: 0.4rem;
+              font-weight: $bold;
+              letter-spacing: 0.2rem;
+
+              @include breakpoint(xs) {
+                font-size: 2.5rem;
+              }
+              @include breakpoint(sm) {
+                font-size: 4.5rem;
+                margin-bottom: 0.7rem;
+              }
+              @include breakpoint(md) {
+                font-size: 6rem;
+                margin-bottom: 0.9rem;
+              }
+              @include breakpoint(lg) {
+                font-size: 8rem;
+                margin-bottom: 1rem;
+              }
             }
-            @include breakpoint(sm) {
-              font-size: 7rem;
-            }
-            @include breakpoint(md) {
-              font-size: 10rem;
-            }
-            @include breakpoint(lg) {
-              font-size: 12rem;
+            .seconds {
+              width: 5.625rem;
+              display: flex;
+              justify-content: center;
+              @include breakpoint(xs) {
+                width: 4.0625rem;
+              }
+              @include breakpoint(sm) {
+                width: 7.1875rem;
+              }
+              @include breakpoint(md) {
+                width: 8.4375rem;
+              }
+              @include breakpoint(lg) {
+                width: 10.625rem;
+              }
             }
           }
-          .seconds {
-            font-size: 3.5rem;
-            font-family: $Glacial-Indifference;
-            margin-bottom: 0.4rem;
-            font-weight: $bold;
-            letter-spacing: 0.2rem;
-            @include breakpoint(xs) {
-              font-size: 2.5rem;
-            }
-            @include breakpoint(sm) {
-              font-size: 4.5rem;
-              margin-bottom: 0.7rem;
-            }
-            @include breakpoint(md) {
-              font-size: 6rem;
-              margin-bottom: 0.9rem;
-            }
-            @include breakpoint(lg) {
-              font-size: 8rem;
-              margin-bottom: 1rem;
-            }
-          }
+
           .ampm {
             font-size: 1.5rem;
             font-family: $Anurati;
             text-transform: uppercase;
-            // margin-bottom: 1rem;
-            // margin-left: $x-0-5;
-            position: absolute;
-            left: 300px;
-            bottom: 14px;
+            margin-bottom: 1rem;
+            margin-left: $x-0-5;
             @include breakpoint(xs) {
               font-size: 1rem;
-              left: 220px;
+              margin-bottom: 0.8rem;
             }
             @include breakpoint(sm) {
               font-size: 2rem;
-              left: 400px;
-              bottom: 20px;
+              margin-bottom: 1.4rem;
             }
             @include breakpoint(md) {
               font-size: 2.5rem;
-              left: 550px;
-              bottom: 28px;
+              margin-bottom: 1.7rem;
+              margin-left: $x-1;
             }
-            @include breakpoint(md) {
+            @include breakpoint(lg) {
               font-size: 3rem;
-              left: 670px;
-              bottom: 35px;
-            }
-          }
-        }
-      }
-      .button {
-        margin-top: $x-3;
-        padding: $x-0-5 0;
-        width: 120px;
-        @include breakpoint(sm) {
-          align-self: flex-end;
-          padding: $x-0-75 0;
-        }
-        @include breakpoint(md) {
-          margin-top: 0;
-        }
-      }
-      .hero__arrow--button {
-        margin-top: $x-3;
-        @include breakpoint(sm) {
-          align-self: flex-end;
-          padding: $x-0-75 0;
-        }
-        @include breakpoint(md) {
-          margin-top: 0;
-        }
-        .arrow__wrapper {
-          width: 130px;
-          height: 40px;
-          background-color: $gray-color;
-          color: $dark-color;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          gap: 1rem;
-          cursor: pointer;
-          .arrow__button--text {
-            font-family: $Comfortaa;
-            font-weight: $bold;
-            font-size: $normal-font;
-          }
-          .arrow__button {
-            height: 2.5px;
-            width: 25px;
-            border-radius: 6px;
-            background-color: $dark-color;
-            position: relative;
-            transform: translateY(-50%) rotate(90deg);
-            transition: $trans-ease-in-out;
-            &::before,
-            &::after {
-              content: "";
-              height: 100%;
-              width: 15px;
-              position: absolute;
-              background-color: $dark-color;
-              left: 11px;
-              border-radius: 6px;
-              transition: $trans-ease-in-out;
-            }
-            &::before {
-              transform: translateY(-5px) rotate(40deg);
-            }
-            &::after {
-              transform: translateY(5px) rotate(-40deg);
-            }
-          }
-        }
-        .active--button {
-          .arrow__button {
-            &::before,
-            &::after {
-              left: -1px;
-            }
-            &::before {
-              transform: translateY(-5px) rotate(-40deg);
-            }
-            &::after {
-              transform: translateY(5px) rotate(40deg);
+              margin-bottom: 2.3rem;
             }
           }
         }
       }
     }
-  }
-}
-.transform-hero {
-  margin-top: -450px;
-  @include breakpoint(xs) {
-    margin-top: -440px;
-  }
-  @include breakpoint(sm) {
-    margin-top: -260px;
   }
 }
