fix bg image and fonts bugs

--- a/assets/scss/config/_variables.scss
+++ b/assets/scss/config/_variables.scss
@@ -4,23 +4,23 @@
 /*=================== FONTS ===================*/
 @font-face {
   font-family: Anurati;
-  src: url(../../../assets/fonts/Anurati.otf);
+  src: url(../../assets/fonts/Anurati.otf);
 }
 @font-face {
   font-family: Aquatico;
-  src: url(../../../assets/fonts/Aquatico.otf);
+  src: url(../../assets/fonts/Aquatico.otf);
 }
 @font-face {
   font-family: Comfortaa;
-  src: url(../../../assets/fonts/Comfortaa.ttf);
+  src: url(../../assets/fonts/Comfortaa.ttf);
 }
 @font-face {
   font-family: Glacial Indifference;
-  src: url(../../../assets/fonts/GlacialIndifference.otf);
+  src: url(../../assets/fonts/GlacialIndifference.otf);
 }
 @font-face {
   font-family: Quicksand;
-  src: url(../../../assets/fonts/Quicksand.otf);
+  src: url(../../assets/fonts/Quicksand.otf);
 }
 /*=================== VARIABLES ===================*/
 // Colors
